# SSW695-Group2

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.devcontainer.yml
.github/ISSUE_TEMPLATE/: epic.md  feature.md  user-story.md
.github/workflows/: ci.yml
contributors/: carlos.md
docs/: complete-triage-state.md  current-state-worker-triage.md  uat.md  user-guide.md  worker-design.md
migrations/: env.py
migrations/versions/: 770ceda6d5a8_fix_repo_config_repo_id_not_.py  c9f2a1b4e8d3_add_closed_at_to_triage_decision.py  e60ad1eb0a30_initial_schema.py
scripts/: codegen.sh  lint.sh  sample_webhook_payload.json  smoke.py  swagger_webhook_test.md  test.sh
scripts/smoke/: api.py  commands.py  config.py  console.py  database.py  gateway.py  reporter.py  webhook.py  worker.py
src/buma/: __init__.py  health.py
src/buma/core/: config.py  security.py
src/buma/db/: base.py  models.py
src/buma/gateway/: app.py  deps.py  health.py
src/buma/schemas/: normalized_event.py
src/buma/worker/: consumer.py  runner.py
tests/: test_db_imports.py  test_health.py  test_normalized_event_contract.py
tests/core/: test_config.py  test_security.py
tests/gateway/: test_api_auth_routes.py  test_auth_routes.py  test_config_routes.py  test_config_service.py  test_deps.py  test_dev_routes.py  test_developer_profile_repo.py  test_health.py  test_ingest_service.py  test_observability_routes.py  test_queue_publisher.py  test_repo_config_repo.py  test_webhook_delivery_repo.py  test_webhook_route.py
tests/schemas/: test_api_schemas.py
tests/worker/: test_assignee_selector.py  test_consumer.py  test_event_processor.py  test_github_client.py  test_triage_engine.py
web-dashboard/: README.md  package-lock.json  package.json
web-dashboard/src/: App.js
web-dashboard/src/pages/: Dashboard.jsx  (+7 more)
(+29 files in other folders)
